--- a/SDL_Init.mediawiki
+++ b/SDL_Init.mediawiki
@@ -1,13 +1,12 @@
+<!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
 
 = SDL_Init =
-<code>SDL_Init</code> initializes the SDL library.  This must be called before using any other SDL function.
+Initializes the SDL library.  This must be called before using any other SDL function.
 
 
 == Syntax ==
 ```c++
-#include "SDL.h"
-
 int SDL_Init (Uint32 flags);
 ```
 
@@ -16,36 +15,36 @@ These are the flags which may be passed to SDL_Init() -- you should
 specify the subsystems which you will be using in your application:
 
 {|
-|SDL_INIT_TIMER
-|Initialize timer subsystem
+|'''SDL_INIT_TIMER'''
+|initialize timer subsystem
 |-
-|SDL_INIT_AUDIO
-|Initialize audio subsystem
+|'''SDL_INIT_AUDIO'''
+|initialize audio subsystem
 |-
-|SDL_INIT_VIDEO
-|Initialize video subsystem
+|'''SDL_INIT_VIDEO'''
+|initialize video subsystem
 |-
-|SDL_INIT_CDROM
-|Initialize CD-ROM subsystem
+|'''SDL_INIT_CDROM'''
+|initialize CD-ROM subsystem
 |-
-|SDL_INIT_JOYSTICK
-|Initialize joystick subsystem
+|'''SDL_INIT_JOYSTICK'''
+|initialize joystick subsystem
 |-
-|SDL_INIT_HAPTIC
-|Initialize haptic (force feedback) subsystem
+|'''SDL_INIT_HAPTIC'''
+|initialize haptic (force feedback) subsystem
 |-
-|SDL_INIT_EVERYTHING
-|Initialize all of the above subsystems
+|'''SDL_INIT_EVERYTHING'''
+|initialize all of the above subsystems
 |-
-|SDL_INIT_NOPARACHUTE
-|Don't catch fatal signals
+|'''SDL_INIT_NOPARACHUTE'''
+|don't catch fatal signals
 |-
-|SDL_INIT_EVENTTHREAD
-|Run the event loop in a separate thread (not supported by all OSs)
+|'''SDL_INIT_EVENTTHREAD'''
+|run the event loop in a separate thread (not supported by all OSs)
 |}
 
 == Return Value ==
-Returns <code>0</code> if successful, <code>-1</code> otherwise.
+Returns 0 if successful, -1 otherwise.
 
 If this function fails, you can usually get an error message through [[SDL_GetError]], but not always.  Specifically, if pth_init() fails, no error message is set.
 
@@ -144,8 +143,10 @@ You can call <code>SDL_Init(0)</code> or <code>SDL_Init(SDL_INIT_NOPARACHUTE)</c
 Note that the event system is actually started by the video subsystem, so using SDL_INIT_EVENTTHREAD without SDL_INIT_VIDEO is pointless.
 
 == Related Functions ==
-[[SDL_InitSubSystem]], [[SDL_WasInit]], [[SDL_Quit]]
+ [[SDL_InitSubSystem]] 
+ [[SDL_WasInit]] 
+ [[SDL_Quit]] 
 
 ----
-[[CategoryAPI]]
-[[CategoryAPIInitialization]]
+ [[CategoryAPI]] 
+ [[CategoryAPIInitialization]] 
