--- a/SDL_Init.mediawiki
+++ b/SDL_Init.mediawiki
@@ -143,10 +143,10 @@ You can call <code>SDL_Init(0)</code> or <code>SDL_Init(SDL_INIT_NOPARACHUTE)</c
 Note that the event system is actually started by the video subsystem, so using SDL_INIT_EVENTTHREAD without SDL_INIT_VIDEO is pointless.
 
 == Related Functions ==
- [[SDL_InitSubSystem]] 
- [[SDL_WasInit]] 
- [[SDL_Quit]] 
+:[[SDL_InitSubSystem]] 
+:[[SDL_WasInit]] 
+:[[SDL_Quit]] 
 
 ----
- [[CategoryAPI]] 
- [[CategoryAPIInitialization]] 
+:[[CategoryAPI]] 
+:[[CategoryAPIInitialization]] 
