--- a/SDLFunctionTemplate.mediawiki
+++ b/SDLFunctionTemplate.mediawiki
@@ -2,7 +2,6 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_FunctionName =
-
 Use this function to /insert short function description here/.
 
 
@@ -10,6 +9,7 @@ Use this function to /insert short function description here/.
 ```c++
 value SDL_FunctionName (param)
 ```
+
 == Function Parameters ==
 
 {|
@@ -30,4 +30,4 @@ You can add your code example here
 You can add useful comments here
 
 == Related Functions ==
-[[SDL_OtherFunction]]
+:[[SDL_OtherFunction]]
