--- a/SDL_AudioQuit.mediawiki
+++ b/SDL_AudioQuit.mediawiki
@@ -20,7 +20,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-This function is used internally, and should not be used unless you have a specific need to specify the audio driver you want to use. You should normally use [[SDL_Init()]] or [[SDL_InitSubSystem()]]. 
+This function is used internally, and should not be used unless you have a specific need to specify the audio driver you want to use. You should normally use [[SDL_Init]]() or [[SDL_InitSubSystem]](). 
 
 == Related Functions ==
  [[ ]]
