--- a/SDL_GetAudioStatus.mediawiki
+++ b/SDL_GetAudioStatus.mediawiki
@@ -12,13 +12,8 @@ SDL_audiostatus SDL_GetAudioStatus(void)
 
 == Function Parameters ==
 
-{|
-|'''param'''
-|Something passed to SDL_FunctionName
-|}
-
 == Return Value ==
-Returns either SDL_AUDIO_STOPPED, SDL_AUDIO_PLAYING or SDL_AUDIO_PAUSED depending on the current audio state.
+Returns either SDL_AUDIO_STOPPED, SDL_AUDIO_PLAYING or SDL_AUDIO_PAUSED depending on the current audio state.  For more information see [[SDL_audiostatus]].
 
 == Code Examples ==
 ```c++
@@ -29,4 +24,4 @@ You can add your code example here
 You can add useful comments here
 
 == Related Functions ==
-:[[SDL_OtherFunction]]
+:[[SDL_PauseAudio]]
