--- a/SDL_GetAudioDriver.mediawiki
+++ b/SDL_GetAudioDriver.mediawiki
@@ -11,9 +11,13 @@ const char * SDL_GetAudioDriver (int index)
 ```
 
 == Function Parameters ==
+{|
+|'''index'''
+|the value ranges from 0 to 1-SDL_GetNumAudioDrivers()
+|}
 
 == Return Value ==
-The list of built in audio drivers, in the order that they are normally initialized by default.
+The name of the audio driver at the requested index.  
 
 == Code Examples ==
 ```c++
@@ -24,4 +28,4 @@ You can add your code example here
 This is a driver discovery function.
 
 == Related Functions ==
-:[[ ]]
+:[[SDL_GetNumAudioDrivers]]
