--- a/SDL_GetAudioDriver.mediawiki
+++ b/SDL_GetAudioDriver.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_GetAudioDriver =
-Use this function to return the list of built in audio drivers, in the order that they are normally initialized by default.
+Use this function to get the name of a built in audio driver. 
 
 
 == Syntax ==
@@ -25,7 +25,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-This is a driver discovery function.
+The list of audio drivers is given in the order that they are normally initialized by default.
 
 == Related Functions ==
 :[[SDL_GetNumAudioDrivers]]
