--- a/SDL_GetNumAudioDrivers.mediawiki
+++ b/SDL_GetNumAudioDrivers.mediawiki
@@ -15,7 +15,11 @@ The number of built in audio drivers.
 
 == Code Examples ==
 ```c++
-You can add your code example here
+int i;
+
+for ( i = 0; i < SDL_GetNumAudioDrivers(); ++i ) {
+    printf("Audio driver %d: %s\n", i, SDL_GetAudioDriver(i);
+}
 ```
 
 == Remarks ==
