--- a/SDL_FreeWAV.mediawiki
+++ b/SDL_FreeWAV.mediawiki
@@ -2,22 +2,19 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_FreeWAV =
-Use this function to free data previously allocated with [[SDL_LoadWAV_RW]]().
+Use this function to free data previously allocated with [[SDL_LoadWAV]]() or [[SDL_LoadWAV_RW]]().
 
 
 == Syntax ==
 ```c++
-void SDL_FreeWAV (Uint8 * audio_buf)
+void SDL_FreeWAV(Uint8 * audio_buf)
 ```
 
 == Function Parameters ==
 {|
 |'''audio_buf'''
-|a pointer to the buffer created by SDL_LoadWAV; for more info see [[SDL_LoadWAV]]
+|a pointer to the buffer created by [[SDL_LoadWAV]]() or [[SDL_LoadWAV_RW]]()
 |}
-
-== Return Value ==
-
 
 == Code Examples ==
 ```c++
@@ -28,4 +25,5 @@ You can add your code example here
 You can add useful comments here
 
 == Related Functions ==
+:[[SDL_LoadWAV]]
 :[[SDL_LoadWAV]]
