--- a/SDL_LockTexture.mediawiki
+++ b/SDL_LockTexture.mediawiki
@@ -2,20 +2,19 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_LockTexture =
-
 Use this function to lock a portion of the texture for pixel access.
 
 
 == Syntax ==
 ```c++
-int SDL_LockTexture (SDL_TextureID   textureID,
-                     const SDL_Rect* rect,
-                     int             markDirty,
-                     void**          pixels,
-                     int*            pitch)
+int SDL_LockTexture(SDL_TextureID    textureID,
+                    const SDL_Rect * rect,
+                    int              markDirty,
+                    void **          pixels,
+                    int *            pitch)
 ```
-== Function Parameters ==
 
+== Function Parameters ==
 {|
 |'''textureID'''
 |The texture to lock for access, which was created with SDL_TEXTUREACCESS_STREAMING.
@@ -34,7 +33,6 @@ int SDL_LockTexture (SDL_TextureID   textureID,
 |}
 
 == Return Value ==
-
 0 on success, or -1 if the texture is not valid or was created with SDL_TEXTUREACCESS_STATIC
 
 == Code Examples ==
@@ -46,6 +44,5 @@ You can add your code example here
 You can add useful comments here
 
 == Related Functions ==
-[[SDL_DirtyTexture()]]
-
-[[SDL_UnlockTexture()]]
+:[[SDL_DirtyTexture]]
+:[[SDL_UnlockTexture]]
