--- a/SDL_LockTexture.mediawiki
+++ b/SDL_LockTexture.mediawiki
@@ -41,7 +41,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-If you don't want to mark the entire area dirty you can pass 0 for '''markDirty''' and then use [[SDL_DirtyTexture]]() to mark specific subareas as dirty.
+If you don't want to mark the entire area dirty you can pass 0 for '''markDirty''' and then use [[SDL_DirtyTexture]]() to mark specific subareas dirty.
 
 == Related Functions ==
 :[[SDL_DirtyTexture]]
