--- a/SDL_LockAudio.mediawiki
+++ b/SDL_LockAudio.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_LockAudio =
-Use this function to lock out the callback function.
+Use this function to lock out the audio callback function.
 
 
 == Syntax ==
