--- a/SDL_UnlockAudioDevice.mediawiki
+++ b/SDL_UnlockAudioDevice.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_UnlockAudioDevice =
-Use this function to unlock the callback function for a specified device.
+Use this function to unlock the audio callback function for a specified device.
 
 
 == Syntax ==
@@ -24,7 +24,7 @@ You can add your code example here
 == Remarks ==
 Unlocks a previous [[SDL_LockAudioDevice]]() call. 
 
-The lock manipulated by these functions protects the callback function.  During a [[SDL_LockAudioDevice]]()/SDL_UnlockAudioDevice() pair, you can be guaranteed that the callback function is not running.  
+The lock manipulated by these functions protects the callback function.  During a [[SDL_LockAudioDevice]]()/SDL_UnlockAudioDevice() pair, you can be guaranteed that the callback function for that device is not running.  
 
 Do not call these from the callback function or you will cause deadlock.
 
