--- a/SDL_UnlockAudioDevice.mediawiki
+++ b/SDL_UnlockAudioDevice.mediawiki
@@ -24,7 +24,7 @@ You can add your code example here
 == Remarks ==
 Unlocks a previous [[SDL_LockAudioDevice]]() call. 
 
-The lock manipulated by these functions protects the callback function.  During a [[SDL_LockAudioDevice]]()/SDL_UnlockAudioDevice() pair, you can be guaranteed that the callback function for that device is not running.  
+The lock manipulated by these functions protects the callback function.  During a [[SDL_LockAudioDevice]]()/[[SDL_UnlockAudioDevice]]() pair, you can be guaranteed that the callback function for that device is not running.  
 
 Do not call these from the callback function or you will cause deadlock.
 
